# vivcad-rtl

./: .gitignore  .gitmodules  build.py  flake.nix  pyproject.toml  readme.md
include/firpm/: util.h
nlia/: build.py
rtl/: Blinky.py  UpCounter.py  Verifiable.py
src/ciccomp/: main.cpp  pm.cpp
